--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="wrapper">
-        <p>Random JokeGenerator</p>
+        <h3>Random Jokes!</h3>
+        <p id="joke"> </p>
+        <button id="btn">Click!</button>
     </div>
 </body>
 </html>
